# sonik-swap

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
.github/workflows/: ci-backend.yml  ci-front.yml
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/dummy/: email_verification_provider.rs  mod.rs  music_account_provider_repository.rs  playlist_repository.rs  user_repository.rs
adapters/src/dummy/providers/: mod.rs  token_provider.rs
adapters/src/in_memory/: email_verification_repository.rs  mod.rs  music_account_provider_repository.rs  user_repository.rs
adapters/src/misc/: jwt_provider.rs  mod.rs  password_provider_prod.rs  user_id_provider_prod.rs
applications/api/: Cargo.toml  env.example
applications/api/src/: main.rs  state.rs
applications/api/src/routes/auth/: handlers.rs  login.rs
applications/api/src/routes/auth/login/: input.rs  mod.rs  output.rs
applications/api/src/routes/auth/login/oauth2/: input.rs  mod.rs
applications/api/src/routes/auth/login/oauth2/callback/: input.rs  mod.rs
applications/api/src/routes/auth/signup/: input.rs  mod.rs  output.rs
applications/api/src/utils/: http_response.rs  mod.rs
applications/api/src/utils/extractors/: body.rs  mod.rs  params.rs  query.rs
applications/front/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
integrations/: Cargo.toml
integrations/src/: lib.rs
integrations/src/deezer/: album.rs  artist.rs  error.rs  mod.rs  playlist.rs  track.rs  user.rs
integrations/src/deezer/repositories/: account_repository.rs  playlist_repository.rs
integrations/src/spotify/: album.rs  artist.rs  common.rs  error.rs  mod.rs  playlist.rs  track.rs  user.rs
integrations/src/spotify/repositories/: account_repository.rs  playlist_repository.rs
integrations/tests/: deezer_playlist_repository.rs
integrations/tests/deezer/: payload_artist.json  payload_playlist.json  payload_track.json
integrations/tests/spotify/: payload_artist.json  payload_playlist.json  payload_track.json  payload_user.json
snk-core/: Cargo.toml
snk-core/src/: lib.rs
snk-core/src/commands/: create_credentials_user.rs  mod.rs
snk-core/src/contracts/providers/: jwt_token_provider.rs  mod.rs  password_provider.rs  token_provider.rs  user_id_provider.rs
snk-core/src/contracts/repositories/: email_verification_repository.rs  mod.rs  music_account_provider_repository.rs  playlist_repository.rs  provider_account_repository.rs  user_repository.rs
snk-core/src/entities/: album.rs  artist.rs  email_verification.rs  mod.rs  music_account_provider.rs  playlist.rs  provider_account.rs  track.rs  user.rs  user_oauth2_external_account.rs
snk-core/src/integrations/: mod.rs
snk-core/src/integrations/deezer/: album.rs  artist.rs  error.rs  mod.rs  playlist.rs  track.rs  user.rs
snk-core/src/integrations/deezer/repositories/: account_repository.rs  playlist_repository.rs
snk-core/src/integrations/spotify/: album.rs  artist.rs  common.rs  playlist.rs  track.rs  user.rs
snk-core/src/integrations/spotify/repositories/: account_repository.rs  mod.rs  playlist_repository.rs
snk-core/src/queries/: credentials_authorize_user.rs  credentials_login_user.rs  mod.rs  oauth2_authorize_user.rs  oauth2_login_callback.rs
snk-core/src/utils/: auth.rs
snk-core/src/value_objects/: artist_id.rs  image_cover.rs  mod.rs  playlist_id.rs  product_id.rs  provider.rs  provider_url.rs
snk-core/src/value_objects/auth/: auth_provider.rs  auth_token_claims.rs  mod.rs
snk-core/src/value_objects/misc/: date.rs  email.rs  mod.rs
snk-core/src/value_objects/provider/: mod.rs  provider_id.rs  provider_name.rs
snk-core/src/value_objects/provider_account/: mod.rs  provider_account_id.rs  provider_account_username.rs
snk-core/src/value_objects/user/: mod.rs  user_id.rs  user_password.rs
snk-core/tests/: deezer_playlist_repository.rs
snk-core/tests/deezer/: payload_album.json
snk-core/tests/spotify/: payload_album.json
test-utils/: Cargo.toml
(+39 files in other folders)
