[workspace]
name = "sonik-swap"
resolver = '2'

members = ["adapters", "applications/api", "snk-core"]

[workspace.dependencies]
chrono = "0.4.38"
thiserror = "2.0.5"
url = "2.5.4"

uuid = { version = "1.11.0", features = ["std", "v4"] }

# Business core
snk-core = { path = "./snk-core" }
adapters = { path = "./adapters" }
