[workspace]
resolver = '2'

members = ["adapters", "applications/api", "integrations", "snk-core"]

[workspace.dependencies]
tokio = { version = "1.42.0", features = ['full'] }

chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.5"
url = { version = "2.5.4", features = ["serde"] }

uuid = { version = "1.11.0", features = ["std", "v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

# Business core
snk-core = { path = "./snk-core" }
adapters = { path = "./adapters" }
