[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
snk-core.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
serde.workspace = true
tokio.workspace = true
oauth2.workspace = true

# Providers

jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["std"] }