[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ['json'] }
serde.workspace = true
serde_json.workspace = true
snk-core.workspace = true
tokio.workspace = true
url.workspace = true
chrono.workspace = true
partially = { version = "0.2.1", features = ["derive"] }
