[package]
name = "snk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
url.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
oauth2.workspace = true

# Logging
tracing = "0.1.41"

# Data validation
regex = "1.11.1"
base64 = "0.22.1"

[dev-dependencies]
rstest = "0.24.0"
