[package]
name = "snk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
url.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
oauth2.workspace = true
tokio.workspace = true


reqwest = { version = "0.12.9", features = ['json'] }
partially = { version = "0.2.1", features = ["derive"] }
async-trait = "0.1.86"

# Logging
tracing = "0.1.41"

# Data validation
regex = "1.11.1"
base64 = "0.22.1"

[dev-dependencies]
rstest = "0.24.0"
