[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

axum = { version =  "0.7.9", features = ["macros"] }

# Logs

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }

# Business core
snk-core.workspace = true

# Adapters
adapters.workspace = true
